--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="icon" href="https://dxstmhyqfqr1o.cloudfront.net/favicon/favicon.ico?hash=d17264e5094efd195edf">
-  <link rel="shortcut icon" href="https://dxstmhyqfqr1o.cloudfront.net/favicon/favicon.ico?hash=d17264e5094efd195edf">
+  <link rel="icon" href="https://dxstmhyqfqr1o.cloudfront.net/favicon/Sendbird_Favicon_PNG/Sendbird_Favicon_16X16.png">
+  <link rel="shortcut icon" href="https://dxstmhyqfqr1o.cloudfront.net/favicon/Sendbird_Favicon_PNG/Sendbird_Favicon_16X16.png">
   <link href='https://fonts.googleapis.com/css?family=Exo+2:400,900italic,900,800italic,800,700italic,700,600italic,600,500italic,500,400italic,300italic,200italic,200,100italic,100,300'
     rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,900italic,900,800italic,800,700italic,700,600italic,600,500italic,500,400italic,300italic,200italic,200,100italic,100,300'
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="top">
       <div class="logo">
-        <img src="https://dxstmhyqfqr1o.cloudfront.net/web-basic/symbol_SendBird_positive.svg" width="72" height="72" class="logo-image">
+        <img src="https://dxstmhyqfqr1o.cloudfront.net/symbol/Sendbird_Symbol_SVG/Sendbird_Symbol_RGB.svg" width="72" height="72" class="logo-image">
       </div>
       <div class="title">
         <div class="title-company">
