[SDK-2501] Fixed SendBird to Sendbird (#137)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="dist/sample.index.css">
 
-  <title>Basic Sample | SendBird</title>
+  <title>Basic Sample | Sendbird</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 
     <div class="login">
       <div class="desc">
-        Start chatting on SendBird by choosing your display name.
+        Start chatting on Sendbird by choosing your display name.
         <br> This can be changed anytime and will be shown on 1-on-1 and group messaging.
         <div class="download">
           <a href="https://github.com/sendbird/SendBird-JavaScript/" target="blank" class="download-sample">Download Sample</a>
