--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="title">
         <div class="title-company">
-          SendBird
+          Sendbird
         </div>
         <div class="title-desc">
           Web Basic Sample
