--- a/chat.html
+++ b/chat.html
@@ -12,7 +12,7 @@
     rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="dist/sample.main.css">
-  <title>Basic Sample | SendBird</title>
+  <title>Basic Sample | Sendbird</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
           <img src="https://dxstmhyqfqr1o.cloudfront.net/symbol/Sendbird_Symbol_SVG/Sendbird_Symbol_RGB.svg" width="50" height="50" class="logo-image">
         </div>
         <div class="top-text">
-          SendBird
+          Sendbird
         </div>
       </div>
       <div class="body-left-list">
