--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
 
   <link rel="stylesheet" href="dist/sample.index.css">
 
-  <title>Basic Sample | Sendbird</title>
+  <title>Chat Client powered by Sendbird</title>
 </head>
 
 <body>
   <div class="container">
     <div class="top">
       <div class="logo">
-        <img src="https://dxstmhyqfqr1o.cloudfront.net/symbol/Sendbird_Symbol_SVG/Sendbird_Symbol_RGB.svg" width="72" height="72" class="logo-image">
+        <img src="https://chriswang.tech/static/06aae3ad08e81d319ee1dc3f218f60ca/8102f/profile.jpg" width="72" height="72" class="logo-image">
       </div>
       <div class="title">
         <div class="title-company">
-          Sendbird
+          Chris Wang
         </div>
         <div class="title-desc">
-          Web Basic Sample
+          Chat Client powered by Sendbird
         </div>
       </div>
     </div>
 
     <div class="login">
       <div class="desc">
-        Start chatting on Sendbird by choosing your display name.
+        Start chatting by choosing your display name.
         <br> This can be changed anytime and will be shown on 1-on-1 and group messaging.
         <div class="download">
-          <a href="https://github.com/sendbird/SendBird-JavaScript/" target="blank" class="download-sample">Download Sample</a>
+          <a href="https://github.com/mw866/chat-client" target="blank" class="download-sample">Source Code</a>
         </div>
       </div>
       <div class="form">
