--- a/chat.html
+++ b/chat.html
@@ -20,10 +20,10 @@
     <div class="body-left">
       <div class="body-left-top">
         <div class="top-logo">
-          <img src="https://dxstmhyqfqr1o.cloudfront.net/symbol/Sendbird_Symbol_SVG/Sendbird_Symbol_RGB.svg" width="50" height="50" class="logo-image">
+          <img src="https://chriswang.tech/static/06aae3ad08e81d319ee1dc3f218f60ca/8102f/profile.jpg" width="50" height="50" class="logo-image">
         </div>
         <div class="top-text">
-          Sendbird
+          Chat Client
         </div>
       </div>
       <div class="body-left-list">
